# vk-minecraft-clone

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  NoiseTool.ini  README.md  imgui.ini
.github/workflows/: build.yml  linting.yml
assets/config/: blocks.json  blocks.toml  gui.json  sounds.json  textures.json
saves/: inventory.json
shaders/: default.vert
src/: main.cpp  resources.rc
src/admin/: block_editor.cpp  block_editor.hpp  editor_manager.cpp  editor_manager.hpp  gui_editor.cpp  gui_editor.hpp  imgui_manager.cpp  imgui_manager.hpp  sound_editor.cpp  sound_editor.hpp
src/audio/: audio_manager.cpp  audio_manager.hpp  sound_buffer.hpp  sound_cache.cpp  sound_cache.hpp  sound_manager.cpp  sound_manager.hpp
src/core/: types.hpp
src/core/camera/: camera.cpp  camera.hpp
src/core/logger/: logger.cpp  logger.hpp
src/core/window/: window.cpp  window.hpp
src/ecs/: ecs.hpp
src/ecs/components/physics/: collider_component.hpp  transform.hpp  transform_component.hpp  velocity.hpp  velocity_component.hpp
src/ecs/components/player/: player.hpp  player_component.hpp
src/ecs/systems/physics/: collision.cpp  collision.hpp  physics.cpp  physics.hpp  physics_system.cpp  physics_system.hpp
src/ecs/systems/player/: player.cpp  player.hpp  player_system.cpp  player_system.hpp
src/game/: game.cpp  game.hpp  inventory.cpp  inventory.hpp
src/graphics/: bindless_manager.cpp  device.cpp  device.hpp  display.cpp  display.hpp  gpu_data.cpp  gpu_data.hpp  image.hpp  item_renderer.cpp  overlay_renderer.cpp  overlay_renderer.hpp  pipeline.cpp  pipeline.hpp  swapchain.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  texture_cache.cpp  texture_cache.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vulkan_ctx.cpp  vulkan_ctx.hpp
src/graphics/renderer/: block_renderer.cpp  block_renderer.hpp  overlay_renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/graphics/utils/: init.cpp  utils.cpp  utils.hpp
src/graphics/vulkan/: pipeline.cpp  pipeline.hpp  vulkan_ctx.cpp  vulkan_ctx.hpp
src/gui/: button.cpp  button.hpp  element.hpp  gui.cpp  gui.hpp  gui_element.cpp  gui_element.hpp  gui_manager.cpp  gui_manager.hpp  text_renderer.cpp  text_renderer.hpp
src/shaders/: chunk.frag  chunk.vert  cloud.frag  cloud.vert  default.frag  display.frag  display.vert  global.glsl  gui.frag  gui.vert  item.frag  item.vert  outline.frag  outline.vert  overlay.frag  sky.frag  sky.vert  text.frag  text.vert
src/shaders/include/: binding.glsl
src/utils/console/: console.hpp
src/utils/math/: vec_hash.hpp
src/utils/thread/: thread_pool.hpp
src/world/: block.hpp  block_registry.cpp  block_registry.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  clouds.cpp  clouds.hpp  outline.cpp  outline.hpp  sky.cpp  sky.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp
src/world/blocks/: block.hpp  block_registry.cpp  block_registry.hpp
src/world/chunk/: chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp
src/world/core/: world.cpp  world.hpp
src/world/generation/: world_generator.cpp  world_generator.hpp
src/world/lighting/: light_manager.cpp  light_manager.hpp
src/world/renderer/: outline.cpp  outline.hpp
